--- a/vignettes/StatisticalTests.Rmd
+++ b/vignettes/StatisticalTests.Rmd
@@ -26,31 +26,31 @@ mtcars <- datasets::mtcars |>
 
 ### One Proportion Test
 ```{r}
-one_proportion_test(vs~1, data=mtcars) |> gt()
+one_proportion_test(vs~1, data=mtcars) |> as_gt()
 ```
 
 #### Separately by another categorical variable
 ```{r}
-one_proportion_test(vs ~ am, data=mtcars) |> gt()
+one_proportion_test(vs ~ am, data=mtcars) |> as_gt()
 ```
 
 ### Two Proportion Test
 ```{r}
-two_proportion_test(vs ~ am, data=mtcars) |> gt()
+two_proportion_test(vs ~ am, data=mtcars) |> as_gt()
 ```
 
 #### together in one table
 ```{r}
 combine_tests(
   one_proportion_test(vs ~ am, data=mtcars),
-  two_proportion_test(vs ~ am, data=mtcars)) |> gt()
+  two_proportion_test(vs ~ am, data=mtcars)) |> as_gt()
 ```
 
 ### Pairwise Proportion Tests
 ```{r}
 combine_tests(
   one_proportion_test(vs ~ cyl, data=mtcars),
-  pairwise_proportion_test(vs ~ cyl, data=mtcars)) |> gt()
+  pairwise_proportion_test(vs ~ cyl, data=mtcars)) |> as_gt()
 ```
 
 ### Paired Proportion Test (McNemar's)
@@ -62,45 +62,45 @@ xtabs(~before+after, data=testing) |> addmargins()
 
 combine_tests(
   one_proportion_test(before+after~1, data=testing),
-  paired_proportion_test(after - before ~ 1, data=testing)) |> gt()
+  paired_proportion_test(after - before ~ 1, data=testing)) |> as_gt()
 ```
 
 ### Independence Test
 ```{r}
 combine_tests(
   one_proportion_test(cyl ~ vs, data=mtcars, all_success = TRUE),
-  independence_test(cyl ~ vs, data=mtcars)) |> gt()
+  independence_test(cyl ~ vs, data=mtcars)) |> as_gt()
 ```
 
 ## Tests for Means
 
 ### One Sample t-test
 ```{r}
-one_t_test(wt~1, data=mtcars) |> gt()
+one_t_test(wt~1, data=mtcars) |> as_gt()
 ```
 
 #### Separately by another categorical variable
 ```{r}
-one_t_test(wt ~ am, data=mtcars) |> gt()
+one_t_test(wt ~ am, data=mtcars) |> as_gt()
 ```
 
 ### Two Sample t-test
 ```{r}
-two_t_test(wt ~ am, data=mtcars) |> gt()
+two_t_test(wt ~ am, data=mtcars) |> as_gt()
 ```
 
 #### together in one table
 ```{r}
 combine_tests(
   one_t_test(wt ~ am, data=mtcars),
-  two_t_test(wt ~ am, data=mtcars)) |> gt()
+  two_t_test(wt ~ am, data=mtcars)) |> as_gt()
 ```
 
 ### Pairwise t-tests
 ```{r}
 combine_tests(
   one_t_test(wt ~ cyl, data=mtcars),
-  pairwise_t_test(wt ~ cyl, data=mtcars)) |> gt()
+  pairwise_t_test(wt ~ cyl, data=mtcars)) |> as_gt()
 ```
 
 ### Paired t-test
@@ -111,12 +111,12 @@ testing <- tidyr::tibble(before=rnorm(50, mean=80, sd=7),
 
 combine_tests(
   one_t_test(before+after~1, data=testing),
-  paired_t_test(after - before ~ 1, data=testing)) |> gt()
+  paired_t_test(after - before ~ 1, data=testing)) |> as_gt()
 ```
 
 ## Correlation tests
 ```{r}
-correlation_test(mpg ~ wt + hp, data=mtcars) |> gt()
+correlation_test(mpg ~ wt + hp, data=mtcars) |> as_gt()
 ```
 
 ## Linear models
@@ -130,27 +130,27 @@ m1 <- lm(wt ~ cyl, data=mtcars)
 
 ANOVA table:
 ```{r}
-model_anova(m1) |> gt()
+model_anova(m1) |> as_gt()
 ```
 
 model summary values:
 ```{r}
-model_glance(m1) |> gt()
+model_glance(m1) |> as_gt()
 ```
 
 model coefficients:
 ```{r}
-model_coefs(m1) |> gt()
+model_coefs(m1) |> as_gt()
 ```
 
 model means:
 ```{r}
-model_means(m1, ~cyl) |> gt()
+model_means(m1, ~cyl) |> as_gt()
 ```
 
 Comparing model means:
 ```{r}
-pairwise_model_means(m1, ~cyl) |> gt()
+pairwise_model_means(m1, ~cyl) |> as_gt()
 ```
 
 ### Regression
@@ -162,22 +162,22 @@ m2 <- lm(mpg ~ wt, data=mtcars)
 
 ANOVA table:
 ```{r}
-model_anova(m2) |> gt()
+model_anova(m2) |> as_gt()
 ```
 
 model summary values:
 ```{r}
-model_glance(m2) |> gt()
+model_glance(m2) |> as_gt()
 ```
 
 model coefficients:
 ```{r}
-model_coefs(m2) |> gt() |> fmt_numbers(n_sigfig = 3)
+model_coefs(m2) |> as_gt() |> fmt_numbers(n_sigfig = 3)
 ```
 
 model slope:
 ```{r}
-model_slopes(m2, wt~1) |> gt()
+model_slopes(m2, wt~1) |> as_gt()
 ```
 
 ### Two-way ANOVA
@@ -188,35 +188,35 @@ m3 <- lm(wt ~ vs*am, data=mtcars)
 
 ANOVA table:
 ```{r}
-model_anova(m3) |> gt()
+model_anova(m3) |> as_gt()
 ```
 
 model summary values:
 ```{r}
-model_glance(m3) |> gt()
+model_glance(m3) |> as_gt()
 ```
 
 model coefficients:
 ```{r}
-model_coefs(m3) |> gt() |> fmt_numbers(decimals=2)
+model_coefs(m3) |> as_gt() |> fmt_numbers(decimals=2)
 ```
 
 model means, both averaging over other variables, and separately:
 ```{r}
-model_means(m3, ~vs) |> gt()
+model_means(m3, ~vs) |> as_gt()
 ```
 
 ```{r}
-model_means(m3, ~vs|am) |> gt()
+model_means(m3, ~vs|am) |> as_gt()
 ```
 
 Comparing model means, both averaging over other variables, and separately:
 ```{r}
-pairwise_model_means(m3, ~vs) |> gt()
+pairwise_model_means(m3, ~vs) |> as_gt()
 ```
 
 ```{r}
-pairwise_model_means(m3, ~vs|am) |> gt()
+pairwise_model_means(m3, ~vs|am) |> as_gt()
 ```
 
 ### Multiple regression
@@ -227,45 +227,45 @@ m4 <- lm(mpg ~ am*wt, data=mtcars)
 
 ANOVA table:
 ```{r}
-model_anova(m4) |> gt()
+model_anova(m4) 
 ```
 
 model summary values:
 ```{r}
-model_glance(m4) |> gt()
+model_glance(m4) |> as_gt()
 ```
 
 model coefficients:
 ```{r}
-model_coefs(m4) |> gt() |> fmt_numbers(decimals=2)
+model_coefs(m4) |> as_gt() |> fmt_numbers(decimals=2)
 ```
 
 model means, both averaging over other variables, and separately:
 ```{r}
-model_means(m4, ~am) |> gt()
+model_means(m4, ~am) |> as_gt()
 ```
 
 ```{r}
-model_means(m4, ~am | wt, at=list(wt=c(2,5))) |> gt()
+model_means(m4, ~am | wt, at=list(wt=c(2,5))) |> as_gt()
 ```
 
 Comparing model means, both averaging over other variables, and separately:
 ```{r}
-pairwise_model_means(m4, ~am) |> gt()
+pairwise_model_means(m4, ~am) |> as_gt()
 ```
 
 ```{r}
-pairwise_model_means(m4, ~am | wt, at=list(wt=c(2,5))) |> gt()
+pairwise_model_means(m4, ~am | wt, at=list(wt=c(2,5))) |> as_gt()
 ```
 
 Model slopes, both averaging over other variables, and separately:
 ```{r}
-model_slopes(m4, wt~1) |> gt()
-model_slopes(m4, wt~am) |> gt()
+model_slopes(m4, wt~1) |> as_gt()
+model_slopes(m4, wt~am) |> as_gt()
 ```
 
 Comparing model slopes
 
 ```{r}
-pairwise_model_slopes(m4, wt~am) |> gt()
+pairwise_model_slopes(m4, wt~am) |> as_gt()
 ```
