--- a/inst/template.qmd
+++ b/inst/template.qmd
@@ -19,7 +19,7 @@ library(conflicted)
 library(tidyverse)
 library(gt)
 library(umncvmstats)
-conflicts_prefer(dplyr::filter, dplyr::lag, dplyr::select, umncvmstats::gt)
+conflicts_prefer(dplyr::filter, dplyr::lag, dplyr::select)
 ```
 
 ## Part 1
