--- a/README.Rmd
+++ b/README.Rmd
@@ -35,21 +35,11 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(umncvmstats)
-## basic example code
+mtcars <- datasets::mtcars |> 
+  dplyr::mutate(am=forcats::fct_recode(factor(am), 
+                    "automatic"="0", "manual"="1"))
+
+combine_tests(
+  one_t_test(wt ~ factor(am), mtcars),
+  two_t_test(wt ~ factor(am), mtcars))
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
