--- a/vignettes/LinearModels.Rmd
+++ b/vignettes/LinearModels.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Statistical Tests"
+title: "Linear Models"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Statistical Tests}
+  %\VignetteIndexEntry{Linear Models}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -16,91 +16,6 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(umncvmstats)
-
-```
-
-## Tests for Proportions
-
-### One Proportion Test
-```{r}
-one_proportion_test(vs~1, data=mtcars2)
-```
-
-#### Separately by another categorical variable
-```{r}
-one_proportion_test(vs ~ am, data=mtcars2)
-```
-
-### Two Proportion Test
-```{r}
-two_proportion_test(vs ~ am, data=mtcars2)
-```
-
-#### together in one table
-```{r}
-combine_tests(
-  one_proportion_test(vs ~ am, data=mtcars2),
-  two_proportion_test(vs ~ am, data=mtcars2))
-```
-
-### Pairwise Proportion Tests
-```{r}
-combine_tests(
-  one_proportion_test(vs ~ cyl, data=mtcars2),
-  pairwise_proportion_test(vs ~ cyl, data=mtcars2))
-```
-
-### Paired Proportion Test (McNemar's)
-```{r}
-combine_tests(
-  one_proportion_test(pass1 + pass2 ~ 1, data=passfail),
-  one_proportion_test(pass2 ~ pass1, data=passfail, all_success = TRUE),
-  paired_proportion_test(pass2 - pass1 ~ 1, data=passfail))
-```
-
-### Independence Test
-```{r}
-combine_tests(
-  one_proportion_test(cyl ~ vs, data=mtcars2, all_success = TRUE),
-  independence_test(cyl ~ vs, data=mtcars2))
-```
-
-## Tests for Means
-
-### One Sample t-test
-```{r}
-one_t_test(wt~1, data=mtcars2)
-```
-
-#### Separately by another categorical variable
-```{r}
-one_t_test(wt ~ am, data=mtcars2)
-```
-
-### Two Sample t-test
-```{r}
-two_t_test(wt ~ am, data=mtcars2)
-```
-
-#### together in one table
-```{r}
-combine_tests(
-  one_t_test(wt ~ am, data=mtcars2),
-  two_t_test(wt ~ am, data=mtcars2))
-```
-
-### Pairwise t-tests
-```{r}
-combine_tests(
-  one_t_test(wt ~ cyl, data=mtcars2),
-  pairwise_t_test(wt ~ cyl, data=mtcars2))
-```
-
-### Paired t-test
-```{r}
-combine_tests(
-  one_t_test(score1 + score2 ~ 1, data=passfail),
-  paired_t_test(score2 - score1 ~ 1, data=passfail))
 ```
 
 ## Correlation tests
