--- a/vignettes/Means.Rmd
+++ b/vignettes/Means.Rmd
@@ -18,40 +18,38 @@ knitr::opts_chunk$set(
 library(umncvmstats)
 ```
 
-## Tests for Means
-
-### One Sample t-test
+## One Sample t-test
 ```{r}
-one_t_test(wt~1, data=mtcars2)
+one_t_test(wt ~ 1, data = mtcars2)
 ```
 
-#### Separately by another categorical variable
+### Separately by another categorical variable
 ```{r}
-one_t_test(wt ~ am, data=mtcars2)
+one_t_test(wt ~ am, data = mtcars2)
 ```
 
-### Two Sample t-test
+## Two Sample t-test
 ```{r}
-two_t_test(wt ~ am, data=mtcars2)
+two_t_test(wt ~ am, data = mtcars2)
 ```
 
-#### together in one table
+### together in one table
 ```{r}
 combine_tests(
-  one_t_test(wt ~ am, data=mtcars2),
-  two_t_test(wt ~ am, data=mtcars2))
+  one_t_test(wt ~ am, data = mtcars2),
+  two_t_test(wt ~ am, data = mtcars2))
 ```
 
-### Pairwise t-tests
+## Pairwise t-tests
 ```{r}
 combine_tests(
-  one_t_test(wt ~ cyl, data=mtcars2),
-  pairwise_t_test(wt ~ cyl, data=mtcars2))
+  one_t_test(wt ~ cyl, data = mtcars2),
+  pairwise_t_test(wt ~ cyl, data = mtcars2))
 ```
 
-### Paired t-test
+## Paired t-test
 ```{r}
 combine_tests(
-  one_t_test(score1 + score2 ~ 1, data=passfail),
-  paired_t_test(score2 - score1 ~ 1, data=passfail))
+  one_t_test(score1 + score2 ~ 1, data = passfail),
+  paired_t_test(score2 - score1 ~ 1, data = passfail))
 ```
