--- a/vignettes/Means.Rmd
+++ b/vignettes/Means.Rmd
@@ -53,3 +53,19 @@ combine_tests(
   one_t_test(score1 + score2 ~ 1, data = passfail),
   paired_t_test(score2 - score1 ~ 1, data = passfail))
 ```
+
+## Log transformations
+By default, responses using `log(...)` are back-transformed. 
+To keep the result on the log scale, use `backtransform = FALSE`.
+
+```{r}
+combine_tests(
+  one_t_test(log(wt) ~ am, data = mtcars2, backtransform = FALSE),
+  two_t_test(log(wt) ~ am, data = mtcars2, backtransform = FALSE),
+  one_t_test(log(wt) ~ am, data = mtcars2),
+  two_t_test(log(wt) ~ am, data = mtcars2))
+
+combine_tests(
+  one_t_test(log(score1) + log(score2) ~ 1, data = passfail),
+  paired_t_test(log(score2) - log(score1) ~ 1, data = passfail))
+```
