--- a/vignettes/graphics.Rmd
+++ b/vignettes/graphics.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-#| message: false
+#| include: false
 library(dplyr)
 library(ggplot2)
 library(patchwork)
