--- a/vignettes/graphics.Rmd
+++ b/vignettes/graphics.Rmd
@@ -84,10 +84,7 @@ ggplot(mtcars2) + aes(x=wt, y=mpg) + geom_point() +
 #| fig.height: 4
 plot1 <- ggplot(mtcars2) + aes(gear) + geom_bar()
 plot2 <- ggplot(mtcars2) + aes(gear, fill=cyl) + geom_bar()
-plot3 <- ggplot(mtcars2) + aes(gear, fill=cyl) +
-  geom_bar(position=position_dodge(preserve="single")) +
-  scale_y_continuous(expand = expansion(mult=c(0, 0.05)),
-                     breaks = seq(0, 12, by=4))
+plot3 <- ggplot(mtcars2) + aes(gear, fill=cyl) + geom_bars()
 
 plot1 + plot2 + plot3
 ```
