add patchwork to package list

--- a/inst/template.qmd
+++ b/inst/template.qmd
@@ -17,6 +17,7 @@ format:
 #| message: FALSE
 library(conflicted)
 library(tidyverse)
+library(patchwork)
 library(gt)
 library(umncvmstats)
 conflicts_prefer(dplyr::filter, dplyr::lag, dplyr::select, umncvmstats::as_gt)
