--- a/vignettes/proportions.Rmd
+++ b/vignettes/proportions.Rmd
@@ -19,17 +19,17 @@ knitr::opts_chunk$set(
 library(umncvmstats)
 ```
 
-## One Proportion Test
+## Inference for One Proportion
 
 It will automatically choose between Wilson's CI and the "exact" CI. No null hypothesis is tested by default.
 
 ```{r}
-one_proportion_test(vs ~ 1, data = mtcars2)
+one_proportion_inference(vs ~ 1, data = mtcars2)
 ```
 
 ### Separately by another categorical variable
 ```{r}
-one_proportion_test(vs ~ am, data = mtcars2)
+one_proportion_inference(vs ~ am, data = mtcars2)
 ```
 
 ## Two Proportion Test
@@ -43,22 +43,22 @@ two_proportion_test(vs ~ am, data = mtcars2)
 ### together in one table
 ```{r}
 combine_tests(
-  one_proportion_test(vs ~ am, data = mtcars2),
+  one_proportion_inference(vs ~ am, data = mtcars2),
   two_proportion_test(vs ~ am, data = mtcars2))
 ```
 
 ## Pairwise Proportion Tests
 ```{r}
 combine_tests(
-  one_proportion_test(vs ~ cyl, data = mtcars2),
+  one_proportion_inference(vs ~ cyl, data = mtcars2),
   pairwise_proportion_test(vs ~ cyl, data = mtcars2))
 ```
 
 ## Paired Proportion Test (McNemar's)
 ```{r}
 combine_tests(
-  one_proportion_test(pass1 + pass2 ~ 1, data = passfail),
-  one_proportion_test(pass2 ~ pass1, data = passfail, all_success = TRUE),
+  one_proportion_inference(pass1 + pass2 ~ 1, data = passfail),
+  one_proportion_inference(pass2 ~ pass1, data = passfail, all_success = TRUE),
   paired_proportion_test(pass2 - pass1 ~ 1, data = passfail))
 ```
 
@@ -68,6 +68,6 @@ It will automatically choose between the chi-squared test and Fisher's test.
 
 ```{r}
 combine_tests(
-  one_proportion_test(cyl ~ vs, data = mtcars2, all_success = TRUE),
+  one_proportion_inference(cyl ~ vs, data = mtcars2, all_success = TRUE),
   independence_test(cyl ~ vs, data = mtcars2))
 ```
