two_proportion_inference

--- a/vignettes/output.Rmd
+++ b/vignettes/output.Rmd
@@ -26,8 +26,8 @@ a <- combine_tests(
   one_proportion_inference(34, 99),
   one_proportion_inference(25, 99),
   one_proportion_inference(10, 99),
-  two_proportion_test(c(25, 34), c(99,99)),
-  two_proportion_test(c(10, 34), c(99,99)))
+  two_proportion_inference(c(25, 34), c(99,99)),
+  two_proportion_inference(c(10, 34), c(99,99)))
 ```
 
 ## Rounding
