--- a/vignettes/means.Rmd
+++ b/vignettes/means.Rmd
@@ -21,38 +21,38 @@ library(umncvmstats)
 
 ## One Sample t-test
 ```{r}
-one_t_test(wt ~ 1, data = mtcars2)
+one_t_inference(wt ~ 1, data = mtcars2)
 ```
 
 ### Separately by another categorical variable
 ```{r}
-one_t_test(wt ~ am, data = mtcars2)
+one_t_inference(wt ~ am, data = mtcars2)
 ```
 
 ## Two Sample t-test
 ```{r}
-two_t_test(wt ~ am, data = mtcars2)
+two_t_inference(wt ~ am, data = mtcars2)
 ```
 
 ### together in one table
 ```{r}
 combine_tests(
-  one_t_test(wt ~ am, data = mtcars2),
-  two_t_test(wt ~ am, data = mtcars2))
+  one_t_inference(wt ~ am, data = mtcars2),
+  two_t_inference(wt ~ am, data = mtcars2))
 ```
 
 ## Pairwise t-tests
 ```{r}
 combine_tests(
-  one_t_test(wt ~ cyl, data = mtcars2),
-  pairwise_t_test(wt ~ cyl, data = mtcars2))
+  one_t_inference(wt ~ cyl, data = mtcars2),
+  pairwise_t_inference(wt ~ cyl, data = mtcars2))
 ```
 
 ## Paired t-test
 ```{r}
 combine_tests(
-  one_t_test(score1 + score2 ~ 1, data = passfail),
-  paired_t_test(score2 - score1 ~ 1, data = passfail))
+  one_t_inference(score1 + score2 ~ 1, data = passfail),
+  paired_t_inference(score2 - score1 ~ 1, data = passfail))
 ```
 
 ## Log transformations
@@ -61,12 +61,12 @@ To keep the result on the log scale, use `backtransform = FALSE`.
 
 ```{r}
 combine_tests(
-  one_t_test(log(wt) ~ am, data = mtcars2, backtransform = FALSE),
-  two_t_test(log(wt) ~ am, data = mtcars2, backtransform = FALSE),
-  one_t_test(log(wt) ~ am, data = mtcars2),
-  two_t_test(log(wt) ~ am, data = mtcars2))
+  one_t_inference(log(wt) ~ am, data = mtcars2, backtransform = FALSE),
+  two_t_inference(log(wt) ~ am, data = mtcars2, backtransform = FALSE),
+  one_t_inference(log(wt) ~ am, data = mtcars2),
+  two_t_inference(log(wt) ~ am, data = mtcars2))
 
 combine_tests(
-  one_t_test(log(score1) + log(score2) ~ 1, data = passfail),
-  paired_t_test(log(score2) - log(score1) ~ 1, data = passfail))
+  one_t_inference(log(score1) + log(score2) ~ 1, data = passfail),
+  paired_t_inference(log(score2) - log(score1) ~ 1, data = passfail))
 ```
